--- a/css/style.css
+++ b/css/style.css
@@ -47,19 +47,28 @@ body {
    background-color: transparent;
 }
 
-.logo-box {
+.header__logo-box {
    position: absolute;
    top: 4rem;
    left: 4rem;
 }
-.logo {
+.header__logo {
    height: 3.5rem;
    margin: 2rem;
 }
 
-.logo:hover {
+.header__logo:hover {
    animation: rotate 500ms;
    cursor: pointer;
+}
+
+.header__text-box {
+   position: absolute;
+   top: 40%;
+   left: 50%;
+   /* background-color: red; */
+   transform: translate(-50%, -50%);
+   text-align: center;
 }
 
 .heading-primary {
@@ -69,7 +78,7 @@ body {
    align-items: center;
    margin-bottom: 2rem;
 }
-.heading-primary-main {
+.heading-primary--main {
    display: block;
 
    font-size: 6rem;
@@ -80,25 +89,17 @@ body {
    /* animation-delay: 1s; */
    animation-timing-function: ease-out;
 }
-.heading-primary-main:hover {
+.heading-primary--main:hover {
    animation: rotate 300ms;
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
    display: block;
    font-size: 2rem;
    font-weight: 500;
    letter-spacing: 0.8rem;
    animation: moveInRight 600ms ease-out;
    /* animation-delay: 500ms; */
-}
-.text-box {
-   position: absolute;
-   top: 40%;
-   left: 50%;
-   /* background-color: red; */
-   transform: translate(-50%, -50%);
-   text-align: center;
 }
 
 @keyframes moveInLeft {
@@ -196,6 +197,7 @@ body {
    transition: all 0.2s;
    position: relative;
    font-size: 1.6rem;
+   letter-spacing: 0.5rem;
 }
 
 .btn:hover {
@@ -209,7 +211,7 @@ body {
    box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.2);
 }
 
-.btn-white {
+.btn--white {
    background-color: #fff;
    color: grey;
 }
@@ -227,7 +229,7 @@ body {
    transition: all 0.2s;
 }
 
-.btn-white::after {
+.btn--white::after {
    background-color: white;
    color: grey;
 }
@@ -237,7 +239,7 @@ body {
    opacity: 0;
 }
 
-.btn-animated {
+.btn--animated {
    animation: moveInBottom 0.8s ease-out;
    animation-delay: 0.3s;
    animation-fill-mode: backwards;
